# SLICE

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
SLICE/: __init__.py  core.py
SLICE/line_lists/: Atomic-Ionic.csv  Atomic-Ionic_FineStructure.csv  H-He.csv  H2.csv  HeI-HeII.csv  ISOLineList.txt  NIST-ASDLines.html  ReadMe20240406.txt  VanDePutte+2024_TableA1_PDRs4All-OrionBar.csv  VanDePutte_2024_PDRs4All_OrionBar_LineList.csv  publis20240406.lst
